Test against the same rubies that puppet runs on

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
-rvm: 1.8.7
 notifications:
   email:
     - kronn@kronn.de
+rvm:
+  - 2.1.5
+  - 2.0.0
+  - 1.9.3
+  - 1.8.7
 env:
   - PUPPET_VERSION=2.7.26
   - PUPPET_VERSION=3.0.2
