--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,21 @@ env:
   - PUPPET_VERSION=3.5.1
   - PUPPET_VERSION=3.6.2
   - PUPPET_VERSION=3.7.4
+matrix:
+  exclude:
+    - rvm: 2.1.5
+      env: PUPPET_VERSION=2.7.26
+    - rvm: 2.1.5
+      env: PUPPET_VERSION=3.0.2
+    - rvm: 2.1.5
+      env: PUPPET_VERSION=3.1.1
+    - rvm: 2.1.5
+      env: PUPPET_VERSION=3.2.4
+    - rvm: 2.1.5
+      env: PUPPET_VERSION=3.3.2
+    - rvm: 2.0.0
+      env: PUPPET_VERSION=2.7.26
+    - rvm: 2.0.0
+      env: PUPPET_VERSION=3.0.2
+    - rvm: 2.0.0
+      env: PUPPET_VERSION=3.1.1
